Cherry-pick 256939@main (6d7afcf0850f). https://bugs.webkit.org/show_bug.cgi?id=247052

[MSE] Ensure we are not removing the current time during automatic eviction
    https://bugs.webkit.org/show_bug.cgi?id=247052

    Reviewed by Alicia Boya Garcia.

    In certain cases, depending on the sync frame positions, we could end up removing the current time, which would lead to
    playback stopping. Now we ensure that the previous sync frame to current time is taking into account when calculating
    the maximumRangeEnd.

    * LayoutTests/media/media-source/media-source-append-buffer-full-evict-prior-to-end-expected.txt: Added.
    * LayoutTests/media/media-source/media-source-append-buffer-full-evict-prior-to-end.html: Added.
    * Source/WebCore/platform/graphics/SourceBufferPrivate.cpp:
    (WebCore::SourceBufferPrivate::findPreviousSyncSamplePresentationTime):
    (WebCore::SourceBufferPrivate::evictCodedFrames):
    * Source/WebCore/platform/graphics/SourceBufferPrivate.h:

    Canonical link: https://commits.webkit.org/256939@main